# isa-l

./: .gitignore  README.md
crc/: crc16_t10dif_copy_perf  crc16_t10dif_copy_test  crc16_t10dif_op_perf  crc16_t10dif_perf  crc16_t10dif_test  crc32_funcs_test  crc32_gzip_refl_perf  crc32_ieee_perf  crc32_ieee_perf.c  crc32_iscsi_perf  crc64_funcs_perf  crc64_funcs_test  test
erasure_code/: erasure_code_base_perf  erasure_code_base_perf.c  erasure_code_base_test  erasure_code_perf  erasure_code_perf.c  erasure_code_test  erasure_code_update_perf  erasure_code_update_perf.c  erasure_code_update_test  gf_inverse_test  gf_vect_dot_prod_1tbl  gf_vect_dot_prod_perf  gf_vect_mul_perf  gf_vect_mul_test  my_ec_update_perf
ex2_ISALErasurecodeandrecovery/: CMakeLists.txt  README.md
igzip/: adler32_perf  checksum32_funcs_test  igzip_rand_test  igzip_wrapper_hdr_test
mem/: mem_zero_detect_perf  mem_zero_detect_test
myCRCMulticoreTest/: CMakeLists.txt  crc_ieee_perf  crc_ieee_perf.c  tools.c  tools.h
myCRCMulticoreTest/test/: log  test.sh
myCRCMulticoreTest/test/results/: crc_ieee_perf_cold_20200817-17:39  crc_ieee_perf_cold_20200817-17:42  crc_ieee_perf_cold_20200817-17:47  crc_ieee_perf_warm_20200817-17:29  crc_ieee_perf_warm_20200817-17:53  crc_ieee_perf_warm_20200817-18:08  xor_perf_cold_20200817-14:35  xor_perf_cold_20200817-14:37  xor_perf_warm_20200817-14:20
myECtest/: Data.cpp  Data.hpp  Encoder.cpp  Encoder.hpp  main  main.cpp
myErasureCodeMuticoreTest/: erasure_code_base_perf  erasure_code_base_perf.c  erasure_code_perf  erasure_code_perf.c
raid/: test  (+8 more)
(+42 files in other folders)
